Created new keybind category
Created a new keybind category and moved relevant keybinds to the new category.

--- a/src/main/resources/assets/wynncraftessentials/lang/en_us.json
+++ b/src/main/resources/assets/wynncraftessentials/lang/en_us.json
@@ -1,6 +1,7 @@
 {
     "wcessentials.prefix": "WCESSENTIALS",
     "key.categories.wcessentials": "Wynncraft Essentials",
+    "key.categories.wcessentials.render": "Wynncraft Essentials Render",
     "key.wcessentials.nextplayerrendermode": "Next Player Render Mode",
     "key.wcessentials.lastplayerrendermode": "Previous Player Render Mode",
     "key.wcessentials.skillone": "Active Skill 1",
